# sky-labs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  renderer.rs  timer.rs  window.rs
src/events/: mod.rs
src/input/: keyboard.rs  mod.rs
src/math/: abs.rs  internal_macros.rs  interval.rs  matrix3x3.rs  matrix4x4.rs  mod.rs  number.rs  perspective.rs  rect.rs  size.rs  vector2.rs  vector3.rs  vector4.rs
src/math/number/: as_double.rs  wrap.rs
src/timer/: framerate_counter.rs  performance_counter.rs
src/win/: mod.rs  renderer_d2d.rs  renderer_d3d12.rs  window.rs
src/win/renderer_d3d12/: drawing_session.rs  readme.md  text.rs
src/win/renderer_d3d12/shaders/simple2d/: ps_2d_simple_color.hlsl  vs_2d_screen_position.hlsl
tests/: tests.rs
tests/math/: matrix3x3.rs  matrix4x4.rs  mod.rs  vector2.rs  vector3.rs  vector4.rs
tests/renderer/: mod.rs
