[package]
name = "sky_labs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-implement = "0.59.0"
windows-core = "0.59.0"

[dependencies.windows]
version = "0.59"
features = [
    "Foundation_Numerics",
    "UI_Core",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Gaming",
    "Win32_Globalization",
    "Win32_Graphics",
    "Win32_Graphics_CompositionSwapchain",
    "Win32_Graphics_DXCore",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D9on12",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_Performance_HardwareCounterProfiling",
    "Win32_System_WinRT",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]